k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-hostname-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-hostname
  template:
    metadata:
      labels:
        app: node-hostname
    spec:
      containers:
      - name: node-hostname
        image: jonteponte71/node-hostname:latest
        ports:
        - containerPort: 3000
