k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-hostname-service
spec:
  selector:
    app: node-hostname
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
