k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-hostname-ingress
spec:
  rules:
  - host: node.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: node-hostname-service
            port: 
              number: 3000
